feat: add swagger note
